prod_snapshot_2015-09-24_1030/objects/Production_Deployment__c.object
<CustomObject>
    <description>This object represents a deployment to production. It should contain at least one RFQ which describes the work required to go into QA, and therefore production.</description>
    <fields>
        <fullName>Deployed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Person who did the Production deployment</description>
        <inlineHelpText>Who is releasing to Production?</inlineHelpText>
        <label>Deployed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PD_Deployed_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deployment_Date__c</fullName>
        <description>Date of the Deployment</description>
        <label>Deployment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deployment_Instructions_Link__c</fullName>
        <description>URL (usually in SVN) of the release Instructions document</description>
        <inlineHelpText>Where is the Release Instructions Document?</inlineHelpText>
        <label>Deployment Instructions Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Any relevant information about this deployment should go here</description>
        <inlineHelpText>This will be used for the release notes. The audience is the Business</inlineHelpText>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Development_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The owner of this release from Development</description>
        <inlineHelpText>Who owns this release from Development?</inlineHelpText>
        <label>Development Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PD_Dev_Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The owner of this release from QA.</description>
        <inlineHelpText>Who owns this deployment from QA?</inlineHelpText>
        <label>QA Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PD_QA_Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <description>The name of the Sprint that relates to this deployment, e.g. &quot;1.0.7&quot;</description>
        <inlineHelpText>example: 1.0.7</inlineHelpText>
        <label>Sprint</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Describes the current status of this PD</description>
        <inlineHelpText>Only QA can mark a PD &quot;QA Verified&quot;
Only Release can mark a PD &quot;Deployed to Production&quot;</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>QA Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed to Production</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Brief Description including at minimum Team, Sprint# and release Date</description>
        <inlineHelpText>Example: CRM Sprint 1.0.6 Release Date: 01/30/2014</inlineHelpText>
        <label>Title</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Production Deployment</label>
    <listViews>
        <fullName>Last_3_Months</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Last 3 Months</label>
        <sharedTo>
            <group>CRM_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Deployments</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Deployed to Production</value>
        </filters>
        <label>Open Deployments</label>
        <sharedTo>
            <group>CRM_Team</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PD-{0000}</displayFormat>
        <label>PD Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Production Deployments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>